<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montery"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35dp"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/scrambled"/>

    <Button
        android:id="@+id/scrambled"
        android:text="@string/scrambled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:fontFamily="@font/montery"
        android:textSize="20dp"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:src="@drawable/one_layer"/>

    <Button
        android:id="@+id/layer_one"
        android:text="@string/layer_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:fontFamily="@font/montery"
        android:textSize="20dp"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:src="@drawable/two_layer"/>

    <Button
        android:id="@+id/layer_two"
        android:text="@string/layer_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:fontFamily="@font/montery"
        android:textSize="20dp"/>

</LinearLayout>