<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="15dp"
            android:text="      "
            android:textColor="@color/white"
            android:textSize="900dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="15dp"
            android:text="      "
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="15dp"
            android:text="      "
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="10dp"
            android:text="@string/one_one"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/middle_match" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="10dp"
            android:text="@string/one_two"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="@string/left"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="      "
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="@string/right"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/upside_match" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/upside_match2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="15dp"
            android:text="@string/one_three"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="@string/left"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="           "
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="@string/right"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/u_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/l_p"/>


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/f"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/f_p"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montery"
                android:padding="15dp"
                android:text="   "
                android:textColor="@color/white"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/u"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/r"/>


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/r_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/f_p"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/u"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/f"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montery"
            android:padding="10dp"
            android:text="@string/repeat"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/two_layer"/>

        <Button
            android:id="@+id/layer_two"
            android:text="@string/cont_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:fontFamily="@font/montery"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/return_navi"
            android:text="@string/return_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:fontFamily="@font/montery"
            android:textSize="20dp"/>

    </LinearLayout>

</ScrollView>

